--- a/service/pom.xml
+++ b/service/pom.xml
@@ -2,21 +2,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
-        <groupId>org.apache.dubbo</groupId>
-        <artifactId>dubbo-spring-boot-starter</artifactId>
-        <version>3.0.5</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <artifactId>dubbo-demo-parent</artifactId>
+        <groupId>com.braindata</groupId>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <groupId>com.braindata</groupId>
-    <artifactId>dubbo-demo</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>dubbo-demo</name>
-    <description>dubbo-demo</description>
+    <description>dubbo demo service</description>
+    <artifactId>dubbo-demo-service</artifactId>
+
     <properties>
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>com.braindata</groupId>
+            <artifactId>dubbo-demo-contract</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
