--- a/contract/pom.xml
+++ b/contract/pom.xml
@@ -16,5 +16,33 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
+    <!--定义snapshots库和releases库的nexus地址-->
 
+    <distributionManagement>
+
+        <repository>
+
+            <id>nexus-releases</id>
+
+            <url>
+
+                http://10.10.48.192:8081/nexus/content/repositories/releases/
+
+            </url>
+
+        </repository>
+
+        <snapshotRepository>
+
+            <id>nexus-snapshots</id>
+
+            <url>
+
+                http://10.10.48.192:8081/nexus/content/repositories/snapshots/
+
+            </url>
+
+        </snapshotRepository>
+
+    </distributionManagement>
 </project>
