--- a/service/pom.xml
+++ b/service/pom.xml
@@ -10,11 +10,16 @@
     </parent>
     <description>dubbo demo service</description>
     <artifactId>dubbo-demo-service</artifactId>
-
+    <packaging>pom</packaging>
     <properties>
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
+            <version>3.0.5</version>
+        </dependency>
         <dependency>
             <groupId>com.braindata</groupId>
             <artifactId>dubbo-demo-contract</artifactId>
@@ -40,11 +45,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
+            <version>2.6.2</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <version>2.6.2</version>
             <scope>test</scope>
         </dependency>
         <!-- Dubbo Nacos registry dependency -->
