--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
-.idea/*
+# for eclipse
+.classpath
+.project
+/.settings/
+/target/
+/contract/target/
+/service/target/
+
+# IntelliJ project files
+*.idea
+*.iml
+*.versionsBackup
