--- a/contract/pom.xml
+++ b/contract/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>dubbo-demo-parent</artifactId>
         <groupId>com.braindata</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -26,7 +26,7 @@
 
             <url>
 
-                http://10.10.48.192:8081/nexus/content/repositories/releases/
+                http://10.10.48.192:8081/nexus/repository/maven-releases/
 
             </url>
 
@@ -38,7 +38,7 @@
 
             <url>
 
-                http://10.10.48.192:8081/nexus/content/repositories/snapshots/
+                http://10.10.48.192:8081/nexus/repository/maven-snapshots/
 
             </url>
 
