--- a/service/src/main/resources/application.properties
+++ b/service/src/main/resources/application.properties
@@ -6,9 +6,10 @@ dubbo.protocol.name=dubbo
 dubbo.protocol.port=20880
 dubbo.application.parameters.namespace=c7ba173f-29e5-4c58-ae78-b102be11c4f9
 dubbo.application.parameters.group=dubbo-demo-service
-#
-#nacos.discovery.server-addr=127.0.0.1:8848
-#nacos.discovery.namespace=c7ba173f-29e5-4c58-ae78-b102be11c4f9
-#nacos.discovery.register.group-name=use-nacos-spring-boot
-#nacos.discovery.auto-register=true
-#nacos.discovery.register.service-name=use-nacos-spring-boot
+dubbo.registry.register=true
+
+nacos.discovery.server-addr=127.0.0.1:8848
+nacos.discovery.namespace=c7ba173f-29e5-4c58-ae78-b102be11c4f9
+nacos.discovery.register.group-name=use-nacos-spring-boot
+nacos.discovery.auto-register=true
+nacos.discovery.register.service-name=use-nacos-spring-boot
