--- a/service/src/main/resources/application.properties
+++ b/service/src/main/resources/application.properties
@@ -5,10 +5,11 @@ dubbo.registry.address=nacos://127.0.0.1:8848
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=20880
 #dubbo.application.parameters.namespace=c7ba173f-29e5-4c58-ae78-b102be11c4f9
+#nacos??????
 dubbo.application.parameters.group=dubbo-demo-service
 dubbo.registry.register=true
-dubbo.registry.username=nacos
-dubbo.registry.password=nacos
+#dubbo.registry.username=nacos
+#dubbo.registry.password=nacos
 
 nacos.discovery.server-addr=127.0.0.1:8848
 nacos.discovery.namespace=c7ba173f-29e5-4c58-ae78-b102be11c4f9
