--- a/contract/pom.xml
+++ b/contract/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>dubbo-demo-parent</artifactId>
         <groupId>com.braindata</groupId>
-        <version>0.0.1</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -19,30 +19,17 @@
     <!--定义snapshots库和releases库的nexus地址-->
 
     <distributionManagement>
-
         <repository>
-
             <id>nexus-releases</id>
-
             <url>
-
                 http://10.10.48.192:8081/nexus/repository/maven-releases/
-
             </url>
-
         </repository>
-
         <snapshotRepository>
-
             <id>nexus-snapshots</id>
-
             <url>
-
                 http://10.10.48.192:8081/nexus/repository/maven-snapshots/
-
             </url>
-
         </snapshotRepository>
-
     </distributionManagement>
 </project>
