--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,24 @@
     </modules>
     <groupId>com.braindata</groupId>
     <artifactId>dubbo-demo-parent</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.1-SNAPSHOT</version>
     <name>dubbo-demo</name>
     <description>dubbo-demo</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
-
+    <distributionManagement>
+        <repository>
+            <id>nexus-releases</id>
+            <url>
+                http://10.10.48.192:8081/nexus/repository/maven-releases/
+            </url>
+        </repository>
+        <snapshotRepository>
+            <id>nexus-snapshots</id>
+            <url>
+                http://10.10.48.192:8081/nexus/repository/maven-snapshots/
+            </url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
